website/code/fasta-gcj.log
BUILD COMMANDS FOR: fasta.gcj

Sat Sep 17 10:16:10 PDT 2005

/usr/bin/gcj-3.4 -O3 -fomit-frame-pointer -funroll-loops -o fasta.gcj_run --main=fasta fasta.java
fasta.java:1: error: Class or interface declaration expected.
   EMPTY
   ^
1 error
make[3]: [fasta.gcj_run] Error 1 (ignored)
rm fasta.java

=================================================================
COMMAND LINE (%A is single numeric argument):

fasta.gcj_run %A
Error, could not exec fasta.gcj_run 25000 (No such file or directory)
PATH=/opt/shootout/shootout/bench/fasta:/opt/shootout/shootout/bench/fasta/tmp:/opt/xds_c/bin:/opt/intel_fc_80/bin:/opt/intel_cc_80/bin:/usr/lib/poplog/current-poplog/pop/pop:/usr/bin:/bin:/usr/lib/poplog/current-poplog/pop/com
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
